# metaopt

./: .directory  .gitignore  CMakeLists.txt  Makefile  README  make.project
examples/: E_coli_iAF1260.xml  ecoli.mat
matlab/: Makefile
matlab/matlab/: metaopt.m  metaopt_time.m
matlab/src/: ExitEventHandler.cpp  metaopt_mex.cpp  metaopt_mex.h
octave/: CMakeLists.txt  Makefile  README
octave/src/: ExitEventHandler.cpp  ExitEventHandler.h  metaopt_mex.cpp
sbml/: CMakeLists.txt
sbml/src/: metaopt.cpp
src/metaopt/: Properties.h  Uncopyable.cpp  Uncopyable.h
src/metaopt/algorithms/: BlockingSet.cpp  BlockingSet.h  FCA.cpp  FCA.h  FVA.cpp  FVA.h  FluxForcing.cpp  FluxForcing.h  ModelFactory.cpp  ModelFactory.h
src/metaopt/matlab/: ExitEventHandler.cpp  ExitEventHandler.h  metaopt_mex.cpp  metaopt_mex.h
src/metaopt/model/: Coupling.cpp  Coupling.h  DirectedReaction.h  Metabolite.cpp  Metabolite.h  Model.cpp  Model.h  Precision.cpp  Precision.h  Reaction.cpp  Reaction.h  ReversedReaction.cpp  ReversedReaction.h
src/metaopt/model/impl/: FullModel.cpp  FullModel.h
src/metaopt/model/matlab/: MatlabLoader.cpp  MatlabLoader.h
src/metaopt/model/sbml/: SBMLLoader.cpp  SBMLLoader.h
src/metaopt/model/scip/: AbstractScipFluxModel.cpp  AbstractScipFluxModel.h  DualPotentials.cpp  DualPotentials.h  ISSupply.cpp  ISSupply.h  LPFlux.cpp  LPFlux.h  LPPotentials.cpp  LPPotentials.h  ModelAddOn.cpp  ModelAddOn.h  PotSpaceConstraint.h  ReducedScipFluxModel.cpp  ReducedScipFluxModel.h  ScipModel.cpp  ScipModel.h  Solution.cpp  Solution.h
src/metaopt/model/scip/addon/: PotentialDifferences.cpp  PotentialDifferences.h  ReactionDirections.cpp  ReactionDirections.h
src/metaopt/scip/: ScipError.h
src/metaopt/scip/constraints/: AntiCycleConstraint.cpp  AntiCycleConstraint.h  PotBoundPropagation.cpp  PotBoundPropagation.h  PotBoundPropagation2.cpp  PotBoundPropagation2.h  RelaxedNaiveThermoConstraint.cpp  RelaxedNaiveThermoConstraint.h  SteadyStateConstraint.cpp  SteadyStateConstraint.h  ThermoConstraintHandler.cpp  ThermoConstraintHandler.h  ThermoInfeasibleSetPool.cpp  ThermoInfeasibleSetPool.h  WeakNaiveThermoConstraint.cpp  WeakNaiveThermoConstraint.h
src/metaopt/scip/heur/: CycleDeletionHeur.cpp  CycleDeletionHeur.h
text/: CMakeLists.txt
text/src/: metaopt.cpp
thermo/: CMakeLists.txt  Makefile
thermo/src/: Properties.h
thermo/src/algorithms/: BlockingSet.cpp  BlockingSet.h  FCA.cpp  FCA.h  FVA.cpp  FVA.h  FluxForcing.cpp  FluxForcing.h  ModelFactory.h
thermo/src/metaopt/: Uncopyable.h
thermo/src/metaopt/algorithms/: FCA.h  FluxForcing.cpp
thermo/src/metaopt/model/: DirectedReaction.h  Model.cpp  Model.h  Reaction.h
thermo/src/metaopt/model/sbml/: SBMLLoader.h
thermo/src/metaopt/model/scip/: DualPotentials.cpp  LPPotentials.h  ModelAddOn.h
thermo/src/metaopt/model/scip/addon/: PotentialDifferences.h  ReactionDirections.h
thermo/src/metaopt/scip/: ScipError.h
thermo/src/metaopt/scip/constraints/: PotBoundPropagation2.cpp  PotBoundPropagation2.h  RelaxedNaiveThermoConstraint.cpp  ThermoConstraintHandler.cpp
thermo/src/metaopt/scip/heur/: CycleDeletionHeur.cpp
thermo/src/model/: Coupling.cpp  Coupling.h  DirectedReaction.h  Metabolite.cpp  Metabolite.h  Model.h  Reaction.cpp  Reaction.h
thermo/src/model/impl/: FullModel.cpp  FullModel.h
thermo/src/model/matlab/: MatlabLoader.h
thermo/src/model/octave/: MatlabLoader.cpp  MatlabLoader.h  OctaveLoader.cpp  OctaveLoader.h
thermo/src/model/sbml/: SBMLLoader.cpp  SBMLLoader.h
thermo/src/model/scip/: AbstractScipFluxModel.cpp  AbstractScipFluxModel.h  DualPotentials.cpp  DualPotentials.h  ISSupply.cpp  ISSupply.h  LPFlux.cpp  LPFlux.h  LPPotentials.cpp  LPPotentials.h  ModelAddOn.h  PotSpaceConstraint.cpp  PotSpaceConstraint.h  ReducedScipFluxModel.cpp  ReducedScipFluxModel.h  ScipModel.cpp  ScipModel.h  Solution.h
thermo/src/model/scip/addon/: PotentialDifferences.cpp  PotentialDifferences.h  ReactionDirections.cpp  ReactionDirections.h
thermo/src/model/text/: TextLoader.cpp  TextLoader.h
thermo/src/scip/: ScipError.h
thermo/src/scip/constraints/: PotBoundPropagation2.cpp  PotBoundPropagation2.h  RelaxedNaiveThermoConstraint.h  SteadyStateConstraint.cpp  SteadyStateConstraint.h  ThermoConstraintHandler.cpp  ThermoConstraintHandler.h  ThermoInfeasibleSetPool.h
thermo/src/scip/heur/: CycleDeletionHeur.cpp  CycleDeletionHeur.h
